--- a/404.html
+++ b/404.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Not Found</title>
     <script>
-        window.location = '/'
+        
+        console.log(window.location.href);
+        //window.location = '/'
     </script>
 </head>
 <body>
