routing system fixed

--- a/public/404.html
+++ b/public/404.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Not Found</title>
     <script>
-        
-        console.log(window.location.href);
-        //window.location = '/'
+        window.location = '/'
     </script>
 </head>
 <body>
