--- a/404.html
+++ b/404.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Not Found</title>
+    
     <script>
-        window.location = '/'
+        window.history.pushState({}, '', '/new-path');
+        
     </script>
 </head>
 <body>
