--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
     <title>Page Not Found</title>
     
     <script>
-        window.history.pushState({}, '', '/new-path');
+        window.location = '/'
         
     </script>
 </head>
