--- a/404.html
+++ b/404.html
@@ -6,7 +6,8 @@
     
     <title>Page Not Found</title>
     <script>
-        
+         var pathname = window.location.pathname;
+         window.location.replace("/" + pathname);
     </script>
 </head>
 <body>
