--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <title>Page Not Found</title>
     <script>
          var pathname = window.location.pathname;
-         window.location.replace("https://danielfrancisco.github.io/" + pathname);
+         window.location.replace("https://danielfrancisco.github.io/");
     </script>
 </head>
 <body>
