--- a/public/404.html
+++ b/public/404.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>Page Not Found</title>
     <script>
-        window.location = '/'
+         var pathname = window.location.pathname;
+         window.history.replaceState({ key: 'value' }, '', pathname);
+         window.dispatchEvent(new PopStateEvent('popstate'));
     </script>
 </head>
 <body>
