--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <title>Page Not Found</title>
     <script>
          var pathname = window.location.pathname;
-         window.history.replaceState({ key: 'value' }, '', pathname);
+         window.history.replaceState({ key: 'value' }, '', '/');
          window.dispatchEvent(new PopStateEvent('popstate'));
     </script>
 </head>
