--- a/404.html
+++ b/404.html
@@ -6,7 +6,8 @@
     
     <title>Page Not Found</title>
     <script>
-        
+        console.log('hello world')
+        console.log(cookies.get('darktheme'))
           var pathname = window.location.pathname;
          sessionStorage.setItem('pathName', pathname)
          window.location.replace("https://danielfrancisco.github.io/");
