--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     
     <title>Page Not Found</title>
     <script>
+        const cookies = new Cookies()
         console.log('hello world')
         console.log(cookies.get('darktheme'))
           var pathname = window.location.pathname;
