--- a/404.html
+++ b/404.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>Page Not Found</title>
-    <script type="module">
-        import Cookies from 'universal-cookie';
-        
-        const cookies = new Cookies()
-        console.log('hello world')
-        console.log(cookies.get('darktheme'))
+   <title>Page Not Found</title>
+
+    <script >
+          console.log(document.cookie)
           var pathname = window.location.pathname;
          sessionStorage.setItem('pathName', pathname)
          window.location.replace("https://danielfrancisco.github.io/");
     </script>
+
 </head>
 <body>
 </body>
