--- a/404.html
+++ b/404.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>Page Not Found</title>
-    <script>
+   <title>Daniel Campoverde</title>
+
+    <script >
+          document.addEventListener('DOMContentLoaded', function() {
+            console.log('hello world')
+            console.log(document.cookie)
+        });
+          
           var pathname = window.location.pathname;
          sessionStorage.setItem('pathName', pathname)
          window.location.replace("https://danielfrancisco.github.io/");
     </script>
+
 </head>
 <body>
 </body>
