--- a/404.html
+++ b/404.html
@@ -7,8 +7,9 @@
     <title>Page Not Found</title>
     <script>
         window.onload = (event) => {
-  console.log("page is fully loaded");
-};
+          console.log(document.cookie)
+        }
+        
           var pathname = window.location.pathname;
          sessionStorage.setItem('pathName', pathname)
          window.location.replace("https://danielfrancisco.github.io/");
