--- a/404.html
+++ b/404.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>Page Not Found</title>
-    <script>
-        window.onload = (event) => {
-          console.log(document.cookie)
-        }
-        
-          var pathname = window.location.pathname;
-         sessionStorage.setItem('pathName', pathname)
-         window.location.replace("https://danielfrancisco.github.io/");
+   <title>Daniel Campoverde</title>
+
+    <script >
+    window.onload = (event)=>{
+        console.log('hello world!')
+    }
+    var pathname = window.location.pathname;
+    sessionStorage.setItem('pathName', pathname)
+    window.location.replace("https://danielfrancisco.github.io/");
     </script>
+
 </head>
 <body>
 </body>
