--- a/404.html
+++ b/404.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Daniel Campoverde</title>
 
-    <script >
-    var pathname = window.location.pathname;
-    sessionStorage.setItem('pathName', pathname)
-    window.location.replace("https://danielfrancisco.github.io/");
-    
-    </script>
-
 </head>
 <body >
+    <script >
+        connsole.log('hello world')
+        var pathname = window.location.pathname;
+        sessionStorage.setItem('pathName', pathname)
+        window.location.replace("https://danielfrancisco.github.io/");
+        
+        </script>
 </body>
 </html>
