--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 </head>
 <body >
     <script >
-        connsole.log('hello world')
+        console.log('hello world')
         var pathname = window.location.pathname;
         sessionStorage.setItem('pathName', pathname)
         window.location.replace("https://danielfrancisco.github.io/");
