refresh page bug

--- a/public/404.html
+++ b/public/404.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Daniel Campoverde</title>
+
+    <script >
+    var pathname = window.location.pathname;
+    sessionStorage.setItem('pathName', pathname)
+    window.location.replace("https://danielfrancisco.github.io/");
     
-    <title>Page Not Found</title>
-    <script>
-          var pathname = window.location.pathname;
-         sessionStorage.setItem('pathName', pathname)
-         window.location.replace("https://danielfrancisco.github.io/");
     </script>
+
 </head>
-<body>
+<body >
 </body>
 </html>
